--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <link rel = "stylesheet" href = "style.css"/>
+    <script src="yes.js" ></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Batman Characters</title>
+</head>
+<body>
+    <h1>Batman Characters</h1>
+    <ul id="character-list"></ul>
+        
+    </body>
 
+</html>
