--- a/index.html
+++ b/index.html
@@ -7,10 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batman Characters</title>
 </head>
+<header>
+    <img src = "images/logobat.jpg" alt = "batman logo">
+    <div class="topnav">
+        <div class="items">
+            <a href = "">Home</a>
+            <a href = "">Adaptions</a>
+            <a href = "">Comics</a>
+            <a href = "">About</a>
+            <a href = ''>Feedback</a>
+        </div>
+</header>
 <body>
-    <h1>Batman Characters</h1>
-    <ul id="character-list"></ul>
-        
-    </body>
+    <section class="batman">
+        <h1>Who is The Batman?</h1>
+        <img src = "images/batman.png" alt = "batman">
+    </section>
+    <section class="characters">
+        <h1>Other Characters</h1>
+        <ul id="character-list"></ul>
+        <div class="button-container">
+            <button id="toggle-btn" onclick="toggleCharacters()">Show All</button>
+        </div>
+    </section>
+</body>
+
+<footer>
+    <h1>This is the footer</h1>
+</footer>
 
 </html>
