--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel = "stylesheet" href = "style.css"/>
-    <script src="yes.js" ></script>
+    <link rel = "stylesheet" href = "styles/style.css"/>
+    <script src="scripts/yes.js" ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batman Characters</title>
 </head>
