--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel = "stylesheet" href = "styles/style.css"/>
-    <script src="scripts/yes.js" ></script>
+    <script src="scripts/yes.js" defer ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batman Characters</title>
 </head>
