added links to the pages for the home page's navigation panel

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
     <div class="topnav">
         <div class="items">
-            <a href = "">Home</a>
-            <a href = "">Adaptions</a>
-            <a href = "">Comics</a>
+            <a href = "index.html">Home</a>
+            <a href = "adaptations.html">Adaptions</a>
+            <a href = "comics.html">Comics</a>
             <a class = "btn-modal">Feedback</a>
             <a class = "dark-mode">Dark Mode</a>
         </div>
