made some corrections

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="topnav">
         <div class="items">
             <a href = "index.html">Home</a>
-            <a href = "adaptations.html">Adaptions</a>
+            <a href = "adaptations.html">Adaptations</a>
             <a href = "comics.html">Comics</a>
             <a class = "btn-modal">Feedback</a>
             <a class = "dark-mode">Dark Mode</a>
