still making some corrections

--- a/adaptations.html
+++ b/adaptations.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="adaptations.html">Adaptations</a></li>
-                    <li><a href="comics.html">Movies</a></li>
+                    <li><a href="comics.html">Comics</a></li>
                     <li><a href="feedback.html">Feedback</a></li>
                 </ul>
                 <button id="darkModeToggle">🌙</button>
