made some corrections

--- a/adaptations.html
+++ b/adaptations.html
@@ -46,7 +46,7 @@
             <!--TV Shows content-->
             <section id="tv-series">
                 <h2>TV Shows</h2>
-                <div id="show-container"></div> <!--will display movie data from an API fetched in the JavaScript file-->
+                <div id="shows-container"></div> <!--will display movie data from an API fetched in the JavaScript file-->
             </section>
         </main>
 
