--- a/index.html
+++ b/index.html
@@ -309,6 +309,20 @@
             <button id="toggle-btn" onclick="toggleCharacters()">Show All</button>
         </div>
     </section>
+    <section class = "other-pages">
+      <div class = "page2">
+          <h1>Adaptations</h1>
+          <a href = "adaptations.html">Learn more about the different adaptations of batman</a>
+      </div>
+
+      <div class = "page2">
+        <h1>Comics</h1>
+        <a href="comics.html">Learn more about the different Batman comics</a>
+      </div>
+
+
+
+    </section>
 </body>
 
 <footer>
