made some changes to my pages, and moved the CSS for header and footer into their respective CSS files

--- a/comics.html
+++ b/comics.html
@@ -13,17 +13,6 @@
   <body>
     <header>
       <img src = "images/logobat.jpg" alt = "batman logo">
-            <div class = "menu">
-              <div class ="bar1"></div>
-              <div class ="bar2"></div>
-              <div class ="bar3"></div>
-            </div>
-            <div class="topnav">
-                <div class="items">
-                    <a href = "index.html">Home</a>
-                    <a href = "adaptations.html">Adaptions</a>
-                    <a href = "comics.html">Comics</a>
-                    <a class = "btn-modal">Feedback</a>
           
       <nav>
         <ul>
@@ -47,7 +36,7 @@
     </main>
 
     <footer>
-      
+      <p>Teph Milford & Hyrum Whittier</p>
     </footer>
   </body>
 </html>
