--- a/adaptations.html
+++ b/adaptations.html
@@ -6,6 +6,8 @@
         <meta name="description" content="A grid of movies/tv shows featuring or starring the Dark Knight, Batman.">
         <meta name="author" content="Angela Milford">
         
+        <link rel="icon" href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text y=".9em" font-size="90">🦇</text></svg>' type="image/svg+xml">
+
         <title>Adaptations of Batman</title>
         
         <link rel="stylesheet" href="styles/adaptations.css"> <!--CSS file-->
