--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="scripts/home.js" defer ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="This website will teach you all about Batman">
-    <title>Batman Characters</title>
+    <title>Batman Wiki</title>
 </head>
   <header>
     <img src = "images/logobat.jpg" alt = "batman logo">
@@ -21,7 +21,7 @@
             <li><a href="adaptations.html">Adaptations</a></li>
             <li><a href="comics.html">Comics</a></li>
             <div class = "buttons">
-              <button class="btn-modal">💡</button>
+              <button class="btn-modal">ℹ️</button>
               <button id="darkModeToggle">🌙</button>
             </div>
         </ul>
