--- a/comics.html
+++ b/comics.html
@@ -8,6 +8,11 @@
     <title>Comics</title>
     <link rel="stylesheet" href="styles/comics.css">
     <script src="scripts/comics.js" defer></script>
+
+          <!--Google Fonts-->
+          <link rel="preconnect" href="https://fonts.googleapis.com">
+          <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+          <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Russo+One&display=swap" rel="stylesheet">
   </head>
 
   <body>
