Just need to fix the padding of the CSS animation and put the code into their respective partials

--- a/comics.html
+++ b/comics.html
@@ -3,13 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A grid of Batman comics and adaptations.">
+    <meta name="description" content="A grid of Batman comics.">
     <meta name="author" content="Angela Milford">
 
+    <!--Favicon-->
     <link rel="icon" href="images/favicon.ico" type="image/favicon">
 
     <title>Comics</title>
+
+    <!--CSS file-->
     <link rel="stylesheet" href="styles/comics.css">
+    
+    <!--JavaScript file-->
     <script src="scripts/comics.js" defer></script>
 
     <!--Google Fonts-->
@@ -22,13 +27,19 @@
     <header>
       <img src = "images/logobat.jpg" alt = "Batman Website Logo">
           
+      <div class = "menu">
+        <div class ="bar1"></div>
+        <div class ="bar2"></div>
+        <div class ="bar3"></div>
+      </div>
+
       <nav aria-label="Main Navigation">
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="adaptations.html">Adaptations</a></li>
           <li><a href="comics.html">Comics</a></li>
-          <li><a href="feedback.html">Feedback</a></li>
         </ul>
+
         <button id="darkModeToggle">🌙</button>
       </nav>    
     </header>
