--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel = "stylesheet" href = "styles/style.css"/>
-    <script src="scripts/home.js" defer ></script>
+    <script type = "module" src="scripts/home.js" defer ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="This website will teach you all about Batman">
     <title>Batman Wiki</title>
 </head>
   <header>
-    <img src = "images/logobat.jpg" alt = "batman logo">
+    <img id = "main-logo" src = "images/logobat.jpg" alt = "batman logo">
     <div class = "menu">
       <div class ="bar1"></div>
       <div class ="bar2"></div>
@@ -332,7 +332,7 @@
 
 <footer>
     <div class="footer-content">
-      <img class="logo" src = "images/logo.webp" alt = "logo">
+      <img id = "footer-logo" class="logo" src = "images/logo.webp" alt = "logo">
       <p>Hyrum Whittier & Angela Milford<br>Last Updated: <span id="lastModified"></span></p>
       <div class="social-icons">
         <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates  -->
