--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="This website will teach you all about Batman">
     <title>Batman Wiki</title>
+    <link rel="icon" href="images/favicon.ico" type="image/favicon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Russo+One&display=swap" rel="stylesheet">
 </head>
   <header>
     <img id = "main-logo" src = "images/logobat.jpg" alt = "batman logo">
@@ -21,7 +25,7 @@
             <li><a href="adaptations.html">Adaptations</a></li>
             <li><a href="comics.html">Comics</a></li>
             <div class = "buttons">
-              <button class="btn-modal">ℹ️</button>
+              <button class="btn-modal">👍👎</button>
               <button id="darkModeToggle">🌙</button>
             </div>
         </ul>
@@ -285,9 +289,12 @@
               <input type ="email" id = "email" required name= "email" placeholder="johndoe@gmail.com">
               <label for="feedback">Feedback:</label>
               <textarea id="feedback" name="feedback" required placeholder="What can we improve on?" style="height:200px"></textarea>
-              <input type="submit" value="Submit">
+              <input class = "submit" type="submit" value="Submit">
             </form>
           </div>
+        </div>
+        <div class = thank-you>
+          <p>Thank you for your feedback!</p>
         </div>
 </header>
 <body>
