made some corrections and changes

--- a/comics.html
+++ b/comics.html
@@ -55,7 +55,18 @@
     </main>
 
     <footer>
-      <p>Teph Milford & Hyrum Whittier</p>
+      <div class="footer-content">
+        <img class="logo" src = "images/logo.webp" alt = "logo">
+        
+        <p>Angela Milford & Hyrum Whittier<br>Last Updated: <span id="lastModified"></span></p>
+        
+        <div class="social-icons">
+          <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates  -->
+          <a href="https://www.instagram.com/batman/?hl=en"><img src="images/instagram_icon.svg" alt="instagram icon"></a>
+          <a href="https://www.youtube.com/channel/UCiifkYAs_bq1pt_zbNAzYGg"><img src="images/youtube_icon.svg" alt="youtube icon"></a>
+          <a href="https://www.pinterest.com/dccomics/"><img src="images/pinterest_icon.svg" alt="pinterest icon"></a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
