--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script type = "module" src="scripts/home.js" defer ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="This website will teach you all about Batman">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <title>Batman Wiki</title>
     <link rel="icon" href="images/favicon.ico" type="image/favicon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
