--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       
         <div class = "about-batman">
           <h1>Home Page</h1>
-          <img src = "images/batman.png" alt = "batman">
+          <img src = "images/batman.webp" alt = "batman">
             <div class="about-paragraph">
                 
                 <p>Welcome to our Batman wiki, your ultimate guide to the world of the Dark Knight! This site is dedicated to everything Batman. Explore the history and evolution of Batman through various media, showcasing how he has been reinterpreted over the years. Our adaptations section highlights Batman’s appearances in movies, television shows, and animated series, providing a look at how the character has been brought to life in different forms. The comics section dives into the major story arcs and graphic novels that have defined Batman’s legacy. You’ll discover details about his gadgets, vehicles, and the world of Gotham City itself. Whether you're a long-time fan or just discovering the Dark Knight, this wiki is the perfect resource to immerse yourself in Batman's universe. Thank you for visiting, and enjoy exploring the many facets of the Caped Crusader!</p>
