added aria labels for the buttons

--- a/comics.html
+++ b/comics.html
@@ -39,8 +39,8 @@
           <li><a href="comics.html">Comics</a></li>
           
           <div class = "buttons">
-            <button class="btn-modal">👍👎</button>
-            <button id="darkModeToggle">🌙</button>
+            <button class="btn-modal" aria-label="Open feedback form">👍👎</button>
+            <button id="darkModeToggle" aria-label="Toggle dark mode">🌙</button>
           </div>
         </ul>
       </nav>
